DataBinFE/src/components/charts/style.css
.node-container .node-content {
    height: 5rem; 
    width: 10rem; 
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
    overflow: hidden;
    text-overflow: ellipsis; 
}
.node-container{
    border-radius: 15px;
}

.node-container .node-content:hover{
    color: #062f58;
    background-color:#d9bbfb; 
    margin:'none'
   
}

.p-organizationchart .p-organizationchart-line-top {
    border-top: 3px solid #e5e7eb;
    border-color:#e5e7eb;
}

.p-organizationchart .p-organizationchart-line-left {
    border-right: 3px solid #e5e7eb;
    border-color: #e5e7eb;
}


.node-label,
.node-data {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    text-align: center; 
}

.p-organizationchart-line-down {
    background: #e5e7eb;
    height: 1.6rem;
}

 

